<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TGK Capital</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_pending_sync">Pending Sync</string>
    <string name="tab_templates">Templates</string>
    <string name="tgkfinancial">TGK Capital</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="sign_up"><u>Don\'t have an account? Signup</u></string>
    <string name="terms">By continuing, you agree to the Terms of Use and Privacy Policy</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="create_new_improvement">Create New Agreement</string>
    <string name="tgk_portfolios">TGK Portfolios</string>
    <string name="upcoming_appointments">Your upcoming investment presentations:</string>
    <string name="signed">Signed</string>
    <string name="unsigned">Unsigned</string>
    <string name="new_agreement_title">Developer\'s Notes</string>
    <string name="new_agreement_message">You can either compose an envelope in online or offline mode. You would need to check for
        network connectivity and present the appropriate view controller.</string>
    <string name="online_envelope">Online Envelope</string>
    <string name="offline_envelope">Offline Envelope</string>
    <string name="cancel">Cancel</string>
    <string name="envelope_created_title">TGK Portfolios</string>
    <string name="envelope_created_message">Envelope created successfully</string>
    <string name="sign">Sign</string>
    <string name="ok" tools:ignore="PrivateResource">OK</string>
    <string name="envelope_signed_offline_message">Signing completed, please remember to sync your envelope</string>
    <string name="tab_portfolio">Portfolio</string>
    <string name="tab_contact">Contact</string>
    <string name="portfolio">Portfolio</string>
    <string name="tom_wood">Tom Wood</string>
    <string name="advisor_agreement">Advisor Agreement</string>
    <string name="dated_june_20_2018">Dated: June 20, 2018</string>
    <string name="status">Status:</string>
    <string name="view_agreement">View Agreement</string>
    <string name="new_agreement_template_message">Would you like to proceed with the offline or online signing flow?</string>
    <string name="envelope_signed_message">Agreement signed successfully</string>
    <string name="settings">Settings</string>
    <string name="agreement">Agreement</string>
    <string name="home">Home</string>
    <string name="sync">Sync</string>
    <string name="sync_all">Sync All</string>
    <string name="syn_pending_error">No pending envelopes to Sync at this time</string>
    <string name="envelope_sync_success_message">Agreement synced successfully</string>
    <string name="envelope_sync_all_success_message">All agreements synced successfully</string>
    <string name="invest">Invest in Portfolio</string>
    <string name="reset">Reset</string>
    <string name="new_presentation_text">New presentation</string>
    <string name="investor_name_hint">Investor name</string>
    <string name="investor_email_hint">Investor email address</string>
    <string name="view_portfolio_text">View Portfolio</string>
    <string name="investor_name_empty">Investor name is empty.</string>
    <string name="investor_email_empty">Investor email is empty.</string>
</resources>
